# Reactor_Client_Server

Client/: CMakeLists.txt  makefile
Client/include/: EncoderDecoder.h  Task.h  Translator.h  connectionHandler.h
Client/src/: BGSclient.cpp  EncoderDecoder.cpp  Task.cpp  Translator.cpp  connectionHandler.cpp
Server/: pom.xml
Server/src/main/java/bgu/spl/net/api/bidi/: ConnectionHandler.java
Server/src/main/java/bgu/spl/net/impl/BGSServer/: ReactorMain.java  TPCMain.java
Server/src/main/java/bgu/spl/net/impl/bidi/: BidiMessageEncoderDecoder.java  BidiProtocolImp.java
Server/src/main/java/bgu/spl/net/impl/bidi/operations/: OPAck.java  OPError.java  OPFollow.java  OPLogin.java  OPLogout.java  OPNotification.java  OPPm.java  OPPost.java  OPRegister.java  OPStat.java  OPUserList.java  Operation.java
Server/src/main/java/bgu/spl/net/impl/database/: DataBase.java  Messages.java  PM.java  Post.java  User.java
Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  ConnectionsImpl.java  NonBlockingConnectionHandler.java  Reactor.java
